--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>dev.stelmad.sportradar</groupId>
       <artifactId>football-scoreboard-library</artifactId>
       <version>1.0.0-SNAPSHOT</version>
@@ -54,6 +59,13 @@
         <version>5.10.3</version>
         <type>pom</type>
         <scope>import</scope>
+      </dependency>
+      <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+      <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>5.12.0</version>
+        <scope>test</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
